Fix alignment for show/hide outdated link on resolved conversation

--- a/web_src/less/_repository.less
+++ b/web_src/less/_repository.less
@@ -1152,6 +1152,11 @@
 
                 .segments {
                     box-shadow: none;
+
+                    .show-outdated,
+                    .hide-outdated {
+                        display: block;
+                    }
                 }
             }
         }
